<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.temple.bitcoindashboard.AddressFragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/bitcoinAddress"
        android:width="290sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getBalance"
        android:id="@+id/balanceButton"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:id="@+id/textView2"
        android:layout_below="@+id/balanceButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:textSize="25sp"
        android:textColor="#000000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/balanceTextView"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:textSize="25sp"
        android:textColor="#000000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostRecentlyViewed"
        android:id="@+id/textView3"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/editText" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_toEndOf="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

</RelativeLayout>
